--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,30 @@
-.result {
+
+.invoiceContainer{
+  
+}
+.img{
+    width:250px;
+    height:auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .result {
   height: 60px;
   background-color: #bbb;
   width: 100%;
@@ -24,4 +50,4 @@ button {
   width: 25%;
   height: 60px;
   font-size: 30px;
-}
+} */
